--- a/test-output/index.html
+++ b/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">2 suites</span>
+      <span class="top-banner-font-1">2 suites, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Pruebas_de_Aritmetica">
-              <span class="suite-name border-passed">Pruebas de Aritmetica</span>
+              <span class="suite-name border-failed">Pruebas de Aritmetica</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -90,7 +90,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">5 methods, 1 failed,   4 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Pruebas_de_Aritmetica" class="hide-methods failed suite-Pruebas_de_Aritmetica"> (hide)</a> <!-- hide-methods failed suite-Pruebas_de_Aritmetica -->
+                      <a href="#" panel-name="suite-Pruebas_de_Aritmetica" class="show-methods failed suite-Pruebas_de_Aritmetica"> (show)</a> <!-- show-methods failed suite-Pruebas_de_Aritmetica -->
+                    </span>
+                    <div class="method-list-content failed suite-Pruebas_de_Aritmetica">
+                      <span>
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Pruebas_de_Aritmetica" title="PracticaEclipse.Unitarias.AritmeticaTest" hash-for-method="testResta">testResta</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Pruebas_de_Aritmetica -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -116,11 +130,6 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Pruebas_de_Aritmetica" title="PracticaEclipse.Unitarias.AritmeticaTest" hash-for-method="testResta">testResta</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Pruebas_de_Aritmetica" title="PracticaEclipse.Unitarias.AritmeticaTest" hash-for-method="testSuma">testSuma</a> <!-- method navigator-link -->
                       </span>
                       <br/>
@@ -138,6 +147,25 @@
         <div panel-name="suite-Plan_de_pruebas" class="panel Plan_de_pruebas">
         </div> <!-- panel Plan_de_pruebas -->
         <div panel-name="suite-Pruebas_de_Aritmetica" class="panel Pruebas_de_Aritmetica">
+          <div class="suite-Pruebas_de_Aritmetica-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">PracticaEclipse.Unitarias.AritmeticaTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testResta">
+                  </a> <!-- testResta -->
+                  <span class="method-name">testResta</span>
+                  <div class="stack-trace">java.lang.AssertionError: No da el mismo resultado se espereba: 0
+	at PracticaEclipse.Unitarias.AritmeticaTest.testResta(AritmeticaTest.java:40)
+... Removed 26 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Pruebas_de_Aritmetica-class-failed -->
           <div class="suite-Pruebas_de_Aritmetica-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -163,13 +191,6 @@
                   <a name="testMultiplicacion2">
                   </a> <!-- testMultiplicacion2 -->
                   <span class="method-name">testMultiplicacion2</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testResta">
-                  </a> <!-- testResta -->
-                  <span class="method-name">testResta</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -295,28 +316,28 @@ data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testDivision')
 data.setCell(0, 2, 'PracticaEclipse.Unitarias.AritmeticaTest')
-data.setCell(0, 3, 7);
+data.setCell(0, 3, 8);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testMultiplicacion2')
+data.setCell(1, 1, 'testMultiplicacion')
 data.setCell(1, 2, 'PracticaEclipse.Unitarias.AritmeticaTest')
-data.setCell(1, 3, 2);
+data.setCell(1, 3, 3);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testMultiplicacion')
+data.setCell(2, 1, 'testResta')
 data.setCell(2, 2, 'PracticaEclipse.Unitarias.AritmeticaTest')
-data.setCell(2, 3, 1);
+data.setCell(2, 3, 2);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testResta')
+data.setCell(3, 1, 'testMultiplicacion2')
 data.setCell(3, 2, 'PracticaEclipse.Unitarias.AritmeticaTest')
 data.setCell(3, 3, 1);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'testSuma')
 data.setCell(4, 2, 'PracticaEclipse.Unitarias.AritmeticaTest')
-data.setCell(4, 3, 0);
+data.setCell(4, 3, 1);
 window.suiteTableData['Pruebas_de_Aritmetica']= { tableData: data, tableDiv: 'times-div-Pruebas_de_Aritmetica'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 ms</span>
+              <span class="suite-total-time">Total running time: 15 ms</span>
               <div id="times-div-Pruebas_de_Aritmetica">
               </div> <!-- times-div-Pruebas_de_Aritmetica -->
             </div> <!-- times-div -->
@@ -370,27 +391,29 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">testDivision</span>
-                <span class="method-start">9 ms</span>
+                <span class="method-start">14 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testMultiplicacion</span>
-                <span class="method-start">17 ms</span>
+                <span class="method-start">24 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testMultiplicacion2</span>
-                <span class="method-start">19 ms</span>
+                <span class="method-start">28 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">testResta</span>
-                <span class="method-start">22 ms</span>
+                <span class="method-start">31 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testSuma</span>
-                <span class="method-start">25 ms</span>
+                <span class="method-start">41 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">setOut</span>
-                <span class="method-start">28 ms</span>
+                <span class="method-start">45 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
